# pirate-scrabble-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build_web.sh  build_win.bat  buildweb.sh  gamedata.json  pirate_scrabble_data.json  server.py  shell.html  token.txt
docs/html/: annotated.html  annotated_dup.js  classBoxContainer-members.html  classBoxContainer.html  classCenterContainer-members.html  classCenterContainer.html  classControl-members.html  classControl.html  classControl.js  classEntity-members.html  classEntity.html  classEntity.js  classFlowContainer-members.html  classFlowContainer.html  classGameObject-members.html  classGameObject.html  classGameObject.js  classHBFont-members.html  classHBFont.html  classHBFont.js  classLabel-members.html  classLabel.html  classLabel.js  classLayoutSystem-members.html  classLayoutSystem.html  classLayoutSystem.js  classLineInput-members.html  classLineInput.html  classLineInput.js  classLogger-members.html  classLogger.html  classMarginContainer-members.html  classMarginContainer.html  classScopeExitCallback-members.html  classScopeExitCallback.html  classSprite-members.html  classSprite.html  classSprite.js  classTile-members.html  classTile.html  (+135 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_6.js  all_b.js  all_e.js  classes_1.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_9.js  searchdata.js
docs/latex/: annotated.tex  classBoxContainer.tex  classCenterContainer.tex  classControl.tex  classEntity.tex  classFlowContainer.tex  classGameObject.tex  classHBFont.tex  classLabel.tex  classLayoutSystem.tex  classLineInput.tex  classLogger.tex  classMarginContainer.tex  classScopeExitCallback.tex  classSprite.tex  classTile.tex  classTween.tex  classTweenManager.tex  classscrabble_1_1Tile.tex  classserver_1_1CORSRequestHandler.tex  control_8h_source.tex  drawing_8h_source.tex  entity_8h_source.tex  files.tex  filesystem_8h_source.tex  freetype__library_8h_source.tex  game__object_8h_source.tex  hierarchy.tex  layout__system_8h_source.tex  logging_8h_source.tex  login_8h_source.tex  main__menu_8h_source.tex  math_8h_source.tex  md_README.tex  multiplayer_8h_source.tex  queue_8h_source.tex  refman.tex  scope__exit__callback_8h_source.tex  serialization_8h_source.tex  socket__client_8h_source.tex  (+35 more)
src/: main.cpp  sockets.cpp  sockets.h  util.cpp  util.h
src/context/: login.cpp  login.h  main_menu.cpp  main_menu.h  multiplayer.cpp  multiplayer.h  socket_client.cpp  sockets.cpp  sockets.h
src/game_object/: game_object.cpp  game_object.h
src/game_object/entity/: entity.cpp  entity.h  sprite.cpp  sprite.h
src/game_object/tween/: tween.cpp  tween.h
src/game_object/ui/: control.cpp  control.h  drawing.cpp  drawing.h  layout_system.cpp  layout_system.h
src/network/sockets/: web_socket.h  web_socket_desktop.cpp  web_socket_desktop.h  web_socket_web.cpp  web_socket_web.h
src/scrabble/: main.cpp  tile.cpp  tile.h
src/scrabble/actions/: legal_actions.cpp  legal_actions.h
src/scrabble/context/: login.cpp  login.h  main_menu.cpp  main_menu.h  multiplayer.cpp  multiplayer.h  socket_client.cpp  socket_client.h  types.h  types_inspector.h
src/scrabble/sprites/: tile.cpp  tile.h
src/serialization/: types.h  types_inspector.h
src/socket/: socket.cpp  socket.h
src/text/: freetype.cpp  freetype.h  freetype_library.cpp  freetype_library.h  texthb.cpp  texthb.h
src/util/: filesystem.cpp  filesystem.h  math.h  queue.h  scope_exit_callback.h  util.h
src/util/filesystem/: filesystem.cpp  filesystem.h
src/util/logging/: logging.cpp  logging.h
src/util/network/sockets/: web_socket.h  web_socket_desktop.cpp  web_socket_desktop.h  web_socket_web.h
src/util/serialization/: serialization.h
web/: build_web.sh  server.py  shell.html
win32/: build_win.bat
